--- a/MMHandlers/.classpath
+++ b/MMHandlers/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Seppe/eclipse/lib/SpoutPluginAPI.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Seppe/eclipse/lib/BukkitAPI.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Seppe/eclipse/lib/MoreMaterials.jar"/>
+	<classpathentry kind="lib" path="/home/tristan/workspace/SpoutPlugin.jar"/>
+	<classpathentry kind="lib" path="/home/tristan/workspace/bukkit-1.3.1-R0.1-20120805.060107-9.jar"/>
+	<classpathentry kind="lib" path="/home/tristan/workspace/MoreMaterials-1.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
